페이지 보완

--- a/_posts/2020-01-01-example.md
+++ b/_posts/2020-01-01-example.md
@@ -1,13 +1,14 @@
 ---
 title: "게시물 1"
 author: 글쓴이1
-item: 아이템1
+book: 아이템1
 tag: 태그1
+categories:
 image: "/assets/images/profile (200 x 200).png"
 excerpt_separator: <!--more-->
 
 ---
-발췌할 내용
+post1 excerpt
 <!--more-->
 
 ![image]({{ page.image | relative_url }})
