--- a/_posts/2020-01-03-example.md
+++ b/_posts/2020-01-03-example.md
@@ -1,14 +1,14 @@
 ---
 title: "게시물 3"
 author: 글쓴이3
-item: 아이템3
+book: 아이템3
 tags: 
 categories: category3
 image: "/assets/images/profile (200 x 200).png"
 excerpt_separator: <!--more-->
 
 ---
-발췌할 내용
+post3 excerpt
 <!--more-->
 
 ![image]({{ page.image | relative_url }})
