페이지 보완

--- a/_posts/2020-01-01-example.md
+++ b/_posts/2020-01-01-example.md
@@ -1,14 +1,14 @@
 ---
 title: "게시물 1"
 author: 글쓴이1
-book: 아이템1
-tag: 태그1
+book: "처음 배우는 그래픽 레코딩"
+tags: 태그1
 categories:
 image: "/assets/images/profile (200 x 200).png"
 excerpt_separator: <!--more-->
 
 ---
-post1 excerpt
+한 줄 요약
 <!--more-->
 
 ![image]({{ page.image | relative_url }})
