--- a/_posts/2020-01-02-example.md
+++ b/_posts/2020-01-02-example.md
@@ -1,14 +1,14 @@
 ---
 title: "게시물 2"
 author: 글쓴이2
-book: 아이템2
-tag: 태그2
+book: "출근했더니 스크럼 마스터가 된 건에 관하여"
+tags: 태그2
 categories:
 image: "/assets/images/profile (200 x 200).png"
 excerpt_separator: <!--more-->
 
 ---
-post2 excerpt
+한 줄 요약
 <!--more-->
 
 ![image]({{ page.image | relative_url }})
